feat(Update): Update all dependencies
Updated all the dependencies to the latest version.

Changed from maven to gradle